--- a/src/app/components/pages/ligacoes-ura/ligacoes-ura.html
+++ b/src/app/components/pages/ligacoes-ura/ligacoes-ura.html
@@ -2,7 +2,7 @@
 <div class="container mt-5">
     <div class="card shadow">
         <div class="card-body">
-            <p>dashboard works!</p>
+            <p>ligacoes-ura works!</p>
         </div>
     </div>
 </div>
