trazendo a lista de ligacoes filtrando por data

--- a/src/app/components/pages/ligacoes-ura/ligacoes-ura.html
+++ b/src/app/components/pages/ligacoes-ura/ligacoes-ura.html
@@ -1,9 +1,62 @@
-<app-navbar class="container mb-5"/>
-<div class="container mt-5">
-    <div class="card shadow">
-        <div class="card-body">
-            <p>ligacoes-ura works!</p>
-        </div>
-    </div>
-</div>
+<app-navbar class="container mb-5"></app-navbar>
 
+<div class="container mt-5">
+  <div class="card shadow">
+    <div class="card-body">
+
+      <form [formGroup]="formControleDatas" (ngSubmit)="listarLigacoesUra()">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+          <div class="mb-3">
+            <label for="dataInicio" class="form-label">Data Inicial</label>
+            <input type="date" class="form-control" formControlName="dataInicio" id="dataInicio" name="dataInicio">
+          </div>
+
+          <div class="mb-3">
+            <label for="dataFim" class="form-label">Data Final</label>
+            <input type="date" class="form-control" formControlName="dataFim" id="dataFim" name="dataFim">
+          </div>
+
+          <button type="submit" class="btn btn-buscar w-10" [disabled]="formControleDatas.invalid">
+            Buscar
+          </button>
+
+        </div>
+      </form>
+
+      <div class="d-flex justify-content-between align-items-center mb-3">
+
+        <table class="table table-striped table-hover align-middle">
+          <thead class="table">
+            <tr>
+              <th scope="col">Id</th>
+              <th scope="col">Protocolo</th>
+              <th scope="col">Telefone</th>
+              <th scope="col">Context</th>
+              <th scope="col">Data da Geração</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <!-- Linha de 'sem dados' -->
+            <tr *ngIf="ligacoes.length === 0">
+              <td colspan="5" class="text-center text-muted py-3">
+                Nenhuma ligação encontrada.
+              </td>
+            </tr>
+
+            <!-- Linhas de dados -->
+            <tr *ngFor="let ligacao of ligacoes">
+              <th scope="row">{{ ligacao.id }}</th>
+              <td>{{ ligacao.protocolo }}</td>
+              <td>{{ ligacao.telefone }}</td>
+              <td>{{ ligacao.context }}</td>
+              <td>{{ ligacao.dataGeracao | date:'yyyy-MM-dd HH:mm' }}</td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+
+    </div>
+  </div>
+</div>
